# battleships-console-game

./: CMakeLists.txt  README.md  main.cpp
components/: battleship.cpp  battleship.hpp  battleship_selector.cpp  battleship_selector.hpp  board_designer.cpp  board_designer.hpp  button.cpp  button.hpp  full_board_designer_picker.cpp  full_board_designer_picker.hpp  input.cpp  input.hpp  keyboard_actions.cpp  keyboard_actions.hpp  label.cpp  label.hpp  list.cpp  list.hpp  list.tpp  opponent_board.cpp  opponent_board.hpp  player_board.cpp  player_board.hpp  remaining_battleship_viewer.cpp  remaining_battleship_viewer.hpp  screen.cpp  screen.hpp  turn_label.cpp  turn_label.hpp
console/: console.cpp  console.hpp  keyboard.cpp  keyboard.hpp  style.cpp  style.hpp
constants/: constants.hpp  controls.hpp  dimension.hpp  gameplay.hpp  style.hpp
core/: component.cpp  component.hpp  component.tpp  component_traits.cpp  component_traits.hpp  dimension.cpp  dimension.hpp  tab_indexer.cpp  tab_indexer.hpp  tab_indexer.tpp
engine/: ai_peer.cpp  ai_peer.hpp  board_generator.cpp  board_generator.hpp  game_controller.cpp  game_controller.hpp  game_object_serializer.cpp  game_object_serializer.hpp  i_peer.cpp  i_peer.hpp  i_peer_connection.cpp  i_peer_connection.hpp  message_serializer.cpp  message_serializer.hpp  player.cpp  player.hpp  serializable_peer.cpp  serializable_peer.hpp
engine/interfaces/: i_connection.cpp  i_connection.hpp  i_peer.cpp  i_peer.hpp
models/: battleship.cpp  battleship.hpp  bullet.cpp  bullet.hpp  offset.hpp  position.cpp  position.hpp  rectangle.cpp  rectangle.hpp  size.cpp  size.hpp
network/: native_socket.cpp  native_socket.hpp  socket_error.cpp  socket_error.hpp  tcp_client.cpp  tcp_client.hpp  tcp_server.cpp  tcp_server.hpp  tcp_socket.cpp  tcp_socket.hpp
screens/: battleship_selector_screen.cpp  battleship_selector_screen.hpp  board_designer_screen.cpp  board_designer_screen.hpp  game_mode_selector_screen.cpp  game_mode_selector_screen.hpp  gameplay_screen.cpp  gameplay_screen.hpp  join_network_game_screen.cpp  join_network_game_screen.hpp  main_window.cpp  main_window.hpp  opponent_disconnected_screen.cpp  opponent_disconnected_screen.hpp  start_network_game_screen.cpp  start_network_game_screen.hpp
screens/board_designer/: board_designer_screen.cpp  board_designer_screen.hpp
screens/game_setup/: game_mode_selector_screen.cpp  game_mode_selector_screen.hpp  game_setup_screen.cpp  game_setup_screen.hpp  join_network_game_screen.cpp  join_network_game_screen.hpp  start_network_game_screen.cpp  start_network_game_screen.hpp
screens/gameplay/: gameplay_screen.cpp  gameplay_screen.hpp
utils/: text.cpp  text.hpp  vector.hpp  vector.tpp
