cmake_minimum_required(VERSION 3.29)
project(battleships_console_game)

set(CMAKE_CXX_STANDARD 20)

add_executable(battleships_console_game main.cpp
        components/battleship.hpp
        components/battleship.cpp
        components/battleship_selector.hpp
        components/battleship_selector.cpp
        components/board_designer.hpp
        components/board_designer.cpp
        components/input.hpp
        components/input.cpp
        components/keyboard_actions.hpp
        components/keyboard_actions.cpp
        components/label.hpp
        components/label.cpp
        components/list.hpp
        components/list.tpp
        components/list.cpp
        components/opponent_board.hpp
        components/opponent_board.cpp
        components/player_board.hpp
        components/player_board.cpp
        components/screen.hpp
        components/screen.cpp
        console/console.hpp
        console/console.cpp
        console/keyboard.hpp
        console/keyboard.cpp
        console/style.hpp
        console/style.cpp
        constants/controls.hpp
        constants/dimension.hpp
        constants/gameplay.hpp
        constants/style.hpp
        components/button.hpp
        components/button.cpp
        core/component.hpp
        core/component.tpp
        core/component.cpp
        core/component_traits.hpp
        core/component_traits.cpp
        core/dimension.hpp
        core/dimension.cpp
        core/tab_indexer.hpp
        core/tab_indexer.tpp
        core/tab_indexer.cpp
        engine/game_controller.hpp
        engine/game_controller.cpp
        engine/player.hpp
        engine/player.cpp
        models/battleship.hpp
        models/battleship.cpp
        models/bullet.hpp
        models/bullet.cpp
        screens/board_designer_screen.hpp
        screens/board_designer_screen.cpp
        screens/game_mode_selector_screen.hpp
        screens/game_mode_selector_screen.cpp
        screens/gameplay_screen.hpp
        screens/gameplay_screen.cpp
        screens/start_network_game_screen.hpp
        screens/start_network_game_screen.cpp
        utils/text.hpp
        utils/text.cpp
        utils/vector.hpp
        utils/vector.tpp
)
