cmake_minimum_required(VERSION 3.29)
project(battleships_console_game)

set(CMAKE_CXX_STANDARD 20)

add_executable(battleships_console_game main.cpp
        components/battleship.hpp
        components/battleship.cpp
        components/battleship_selector.hpp
        components/battleship_selector.cpp
        components/board_designer.hpp
        components/board_designer.cpp
        components/full_board_designer_picker.hpp
        components/full_board_designer_picker.cpp
        components/input.hpp
        components/input.cpp
        components/keyboard_actions.hpp
        components/keyboard_actions.cpp
        components/label.hpp
        components/label.cpp
        components/list.hpp
        components/list.tpp
        components/list.cpp
        components/opponent_board.hpp
        components/opponent_board.cpp
        components/player_board.hpp
        components/player_board.cpp
        components/screen.hpp
        components/screen.cpp
        console/console.hpp
        console/console.cpp
        console/keyboard.hpp
        console/keyboard.cpp
        console/style.hpp
        console/style.cpp
        constants/controls.hpp
        constants/dimension.hpp
        constants/gameplay.hpp
        constants/style.hpp
        components/button.hpp
        components/button.cpp
        core/component.hpp
        core/component.tpp
        core/component.cpp
        core/component_traits.hpp
        core/component_traits.cpp
        core/dimension.hpp
        core/dimension.cpp
        core/tab_indexer.hpp
        core/tab_indexer.tpp
        core/tab_indexer.cpp
        engine/game_controller.hpp
        engine/game_controller.cpp
        engine/game_object_serializer.hpp
        engine/game_object_serializer.cpp
        engine/interfaces/i_peer.hpp
        engine/interfaces/i_peer.cpp
        engine/interfaces/i_connection.hpp
        engine/interfaces/i_connection.cpp
        engine/message_serializer.cpp
        engine/message_serializer.hpp
        engine/serializable_peer.hpp
        engine/serializable_peer.cpp
        engine/player.hpp
        engine/player.cpp
        models/battleship.hpp
        models/battleship.cpp
        models/bullet.hpp
        models/bullet.cpp
        network/native_socket.hpp
        network/native_socket.cpp
        network/socket_error.hpp
        network/socket_error.cpp
        network/tcp_client.hpp
        network/tcp_client.cpp
        network/tcp_server.hpp
        network/tcp_server.cpp
        screens/board_designer/board_designer_screen.hpp
        screens/board_designer/board_designer_screen.cpp
        screens/game_setup/game_mode_selector_screen.hpp
        screens/game_setup/game_mode_selector_screen.cpp
        screens/game_setup/game_setup_screen.cpp
        screens/game_setup/game_setup_screen.hpp
        screens/game_setup/join_network_game_screen.hpp
        screens/game_setup/join_network_game_screen.cpp
        screens/game_setup/start_network_game_screen.hpp
        screens/game_setup/start_network_game_screen.cpp
        screens/gameplay/gameplay_screen.hpp
        screens/gameplay/gameplay_screen.cpp
        screens/main_window.hpp
        screens/main_window.cpp
        screens/opponent_disconnected_screen.hpp
        screens/opponent_disconnected_screen.cpp
        utils/text.hpp
        utils/text.cpp
        utils/vector.hpp
        utils/vector.tpp
)
